Add UI interface

--- a/Sapper/Base.lproj/Main.storyboard
+++ b/Sapper/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Sapper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Row and colums count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IEL-IN-T1H" userLabel="RowsAndColumsLabel">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bombs count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYg-A5-d2u" userLabel="BombsCountLabel">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ih-Kb-XF5">
+                                <color key="backgroundColor" red="0.4494342503210953" green="1" blue="0.080495096888592799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                <state key="normal" title="Start game">
+                                    <color key="titleColor" red="1" green="0.12794804589416164" blue="0.20237899446786956" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="vJ2-Y0-s5W"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="9" minValue="9" maxValue="12" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-EC-PhG" userLabel="RowsAndColumnsSlider"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="80" translatesAutoresizingMaskIntoConstraints="NO" id="6Ya-Y9-Bl1" userLabel="BombsCountSlider"/>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Ya-Y9-Bl1" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0y6-gy-LgH"/>
+                            <constraint firstItem="vJ2-Y0-s5W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1HS-EH-BJY"/>
+                            <constraint firstItem="cQp-EC-PhG" firstAttribute="top" secondItem="IEL-IN-T1H" secondAttribute="bottom" constant="8" id="8ed-RD-eKX"/>
+                            <constraint firstItem="IEL-IN-T1H" firstAttribute="top" secondItem="vJ2-Y0-s5W" secondAttribute="bottom" constant="8" id="CRP-Y3-VfN"/>
+                            <constraint firstItem="vJ2-Y0-s5W" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="GQd-Qe-l8a"/>
+                            <constraint firstItem="2ih-Kb-XF5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="H4e-ZP-Ia7"/>
+                            <constraint firstItem="vJ2-Y0-s5W" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="HB5-RB-OWf"/>
+                            <constraint firstItem="6Ya-Y9-Bl1" firstAttribute="top" secondItem="DYg-A5-d2u" secondAttribute="bottom" constant="8" id="P85-WP-QDi"/>
+                            <constraint firstItem="DYg-A5-d2u" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Qs5-qh-LVj"/>
+                            <constraint firstItem="2ih-Kb-XF5" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="UUM-KU-LLc"/>
+                            <constraint firstItem="DYg-A5-d2u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="UkX-09-aaz"/>
+                            <constraint firstItem="6Ya-Y9-Bl1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="X1J-Ic-GQ2"/>
+                            <constraint firstItem="IEL-IN-T1H" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Z5d-rM-I9f"/>
+                            <constraint firstItem="IEL-IN-T1H" firstAttribute="top" secondItem="vJ2-Y0-s5W" secondAttribute="bottom" constant="8" id="cmB-WU-ybc"/>
+                            <constraint firstItem="cQp-EC-PhG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dE0-WP-5m8"/>
+                            <constraint firstItem="2ih-Kb-XF5" firstAttribute="top" secondItem="6Ya-Y9-Bl1" secondAttribute="bottom" constant="8" id="lnO-MI-2Pj"/>
+                            <constraint firstItem="cQp-EC-PhG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="nO1-UR-pKS"/>
+                            <constraint firstItem="DYg-A5-d2u" firstAttribute="top" secondItem="cQp-EC-PhG" secondAttribute="bottom" constant="8" id="oAs-DJ-UvE"/>
+                            <constraint firstItem="IEL-IN-T1H" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="rbB-LE-NlA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="173.59999999999999" y="154.27286356821591"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="259" height="194"/>
+    </resources>
 </document>
