--- a/Sapper/Base.lproj/Main.storyboard
+++ b/Sapper/Base.lproj/Main.storyboard
@@ -35,10 +35,21 @@
                                 <state key="normal" title="Start game">
                                     <color key="titleColor" red="1" green="0.12794804589416164" blue="0.20237899446786956" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="startGameAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y0C-qx-HcS"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="vJ2-Y0-s5W"/>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="9" minValue="9" maxValue="12" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-EC-PhG" userLabel="RowsAndColumnsSlider"/>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="80" translatesAutoresizingMaskIntoConstraints="NO" id="6Ya-Y9-Bl1" userLabel="BombsCountSlider"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="9" minValue="9" maxValue="12" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-EC-PhG" userLabel="RowsAndColumnsSlider">
+                                <connections>
+                                    <action selector="rowsAndColumnsSliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="b9w-jT-WEl"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="80" translatesAutoresizingMaskIntoConstraints="NO" id="6Ya-Y9-Bl1" userLabel="BombsCountSlider">
+                                <connections>
+                                    <action selector="bombsCountValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="99P-34-f6o"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -63,10 +74,35 @@
                             <constraint firstItem="IEL-IN-T1H" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="rbB-LE-NlA"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="BombsCountSlider" destination="6Ya-Y9-Bl1" id="XhP-po-igR"/>
+                        <outlet property="BombsCountTF" destination="DYg-A5-d2u" id="Emx-xL-63l"/>
+                        <outlet property="RowsAndColumnsSlider" destination="cQp-EC-PhG" id="Ds7-1T-iNG"/>
+                        <outlet property="RowsAndColumnsTF" destination="IEL-IN-T1H" id="S4x-QM-AeD"/>
+                        <segue destination="VZ8-pj-Vfw" kind="show" identifier="BeginGameSegue" id="mDE-Na-1ZN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="173.59999999999999" y="154.27286356821591"/>
+        </scene>
+        <!--GameView-->
+        <scene sceneID="fmv-fC-dxy">
+            <objects>
+                <viewController id="VZ8-pj-Vfw" userLabel="GameView" customClass="VDevGameViewController" customModule="Sapper" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tdC-ZK-lpA"/>
+                        <viewControllerLayoutGuide type="bottom" id="9cW-r1-zdb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zg5-V0-njs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LGi-Wz-oVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1359" y="150"/>
         </scene>
     </scenes>
     <resources>
