--- a/Sapper/Base.lproj/Main.storyboard
+++ b/Sapper/Base.lproj/Main.storyboard
@@ -110,6 +110,16 @@
                                     <action selector="makeTestStepHandler:" destination="VZ8-pj-Vfw" eventType="touchUpInside" id="nBU-c4-7eF"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jfq-aT-pSO">
+                                <connections>
+                                    <action selector="gameModeValueChanged:" destination="VZ8-pj-Vfw" eventType="valueChanged" id="9Pn-Jf-DZe"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCm-cu-c3T">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sXt-UB-VDh">
                                 <color key="backgroundColor" red="0.97154517277043384" green="1" blue="0.8371947644969373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -153,19 +163,28 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="sXt-UB-VDh" firstAttribute="top" secondItem="rmd-Gv-5x8" secondAttribute="bottom" constant="8" id="1e8-nk-6b9"/>
                             <constraint firstItem="rmd-Gv-5x8" firstAttribute="top" secondItem="RRv-AC-9N9" secondAttribute="bottom" constant="8" id="4Wx-TE-5O0"/>
-                            <constraint firstItem="sXt-UB-VDh" firstAttribute="leading" secondItem="zg5-V0-njs" secondAttribute="leadingMargin" id="4rn-5a-7pY"/>
-                            <constraint firstItem="sXt-UB-VDh" firstAttribute="trailing" secondItem="zg5-V0-njs" secondAttribute="trailingMargin" id="65E-qW-4Ov"/>
+                            <constraint firstItem="sXt-UB-VDh" firstAttribute="top" secondItem="rmd-Gv-5x8" secondAttribute="bottom" constant="8" id="Dip-V1-W4H"/>
                             <constraint firstItem="rmd-Gv-5x8" firstAttribute="leading" secondItem="zg5-V0-njs" secondAttribute="leadingMargin" id="FCn-CN-uTf"/>
+                            <constraint firstItem="Jfq-aT-pSO" firstAttribute="leading" secondItem="UCm-cu-c3T" secondAttribute="trailing" constant="84" id="Hxe-tE-tRB"/>
+                            <constraint firstItem="9cW-r1-zdb" firstAttribute="top" secondItem="UCm-cu-c3T" secondAttribute="bottom" constant="8" id="I4X-7X-ShF"/>
                             <constraint firstItem="RRv-AC-9N9" firstAttribute="top" secondItem="tdC-ZK-lpA" secondAttribute="bottom" id="Kvi-lI-HxH"/>
+                            <constraint firstItem="9cW-r1-zdb" firstAttribute="top" secondItem="Jfq-aT-pSO" secondAttribute="bottom" constant="8" id="Lbb-ut-yxS"/>
                             <constraint firstItem="RRv-AC-9N9" firstAttribute="trailing" secondItem="zg5-V0-njs" secondAttribute="trailingMargin" id="PXj-l3-R16"/>
                             <constraint firstItem="RRv-AC-9N9" firstAttribute="leading" secondItem="zg5-V0-njs" secondAttribute="leadingMargin" id="SQV-wz-s0d"/>
+                            <constraint firstItem="Jfq-aT-pSO" firstAttribute="leading" secondItem="UCm-cu-c3T" secondAttribute="trailing" constant="84" id="Yoz-Gg-Wp2"/>
                             <constraint firstItem="rmd-Gv-5x8" firstAttribute="top" secondItem="RRv-AC-9N9" secondAttribute="bottom" constant="8" id="Ysg-Kj-uOv"/>
-                            <constraint firstItem="sXt-UB-VDh" firstAttribute="top" secondItem="rmd-Gv-5x8" secondAttribute="bottom" constant="8" id="cRW-fA-ceQ"/>
+                            <constraint firstItem="UCm-cu-c3T" firstAttribute="leading" secondItem="zg5-V0-njs" secondAttribute="leadingMargin" id="eHJ-5E-VRl"/>
+                            <constraint firstItem="sXt-UB-VDh" firstAttribute="trailing" secondItem="zg5-V0-njs" secondAttribute="trailingMargin" id="ghx-fX-gpr"/>
                             <constraint firstItem="rmd-Gv-5x8" firstAttribute="trailing" secondItem="zg5-V0-njs" secondAttribute="trailingMargin" id="hZn-fi-9Ls"/>
+                            <constraint firstItem="Jfq-aT-pSO" firstAttribute="trailing" secondItem="zg5-V0-njs" secondAttribute="trailingMargin" id="wPk-Id-5yY"/>
+                            <constraint firstItem="sXt-UB-VDh" firstAttribute="leading" secondItem="zg5-V0-njs" secondAttribute="leadingMargin" id="xA3-UD-c3p"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="gameModeLabel" destination="UCm-cu-c3T" id="gHZ-YL-foS"/>
+                        <outlet property="gameModeSwitch" destination="Jfq-aT-pSO" id="z6Q-19-DId"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LGi-Wz-oVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
